# Your-electronic-pet

./: .gitignore  CMakeLists.txt  Pet.cpp  Pet.hpp  README.md  main.cpp  resources.qrc
